[package]
name = "lerp_ol"
description = "one line function: lerp"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/wolfired/lerp_ol"
repository = "https://github.com/wolfired/lerp_ol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
